# sourceos-boot

./: AGENTS.md  Makefile  README.md  pyproject.toml  repo.maturity.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.sourceos/: manifest.json
docs/: APPLE_SILICON_EVIDENCE_NORMALIZATION.md  INTEGRATION.md  M2_RECOVERY_INSTALLER_PACKAGING.md  NLBOOT_COMPATIBILITY.md  NLBOOT_INTEGRATION.md  RECOVERY_INSTALLER_ARTIFACT_BUILD_LANE.md  WORLD_CLASS_TARGETS.md
examples/: boot-release-set.example.json  builder-aarch64-dev-release.example.json  control-plane-boot-release-set.example.json  trust-chain-boot-verification.blocked.json  trust-chain-boot-verification.valid.json
examples/apple-silicon-evidence/: normalized-boot-evidence.example.json  raw-apple-silicon-evidence.example.json
examples/artifact-build-lane/: recovery-installer-build-result.example.json
examples/m2-recovery-installer/: normal-boot.example.json  recovery-installer.example.json
examples/nlboot/: adapted-output.example.json  manifest.json  token.json
schemas/: boot-release-set.schema.json  trust-chain-boot-verification-evidence.v0.1.schema.json
src/sourceos_boot/: __init__.py  adapter.py  asahi_boot_chain.py  cli.py  control_plane.py  lifecycle_state_machine.py  rollback_executor.py  validate_boot_release_set.py  validate_trust_chain_boot_verification.py
tests/: test_adapter.py  test_asahi_boot_chain.py  test_boot_release_set_validator.py  test_cli.py  test_control_plane.py  test_lifecycle_state_machine.py  test_rollback_executor.py  test_trust_chain_boot_verification.py
